--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.10.3",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "quill": "^1.3.7"
   }
 }
